--- a/index.html
+++ b/index.html
@@ -45,17 +45,28 @@
                     <h4>Mike Harms</h4>
                     <h4>University of Oregon</h4>
                     <br/>
+                    <h4>SMBE 2016</h4>
+                    <p>Inter-disciplinary Mechanistic Models: From Biophysical Chemistry and Molecular Process to Evolution and Ecology</p>
                 </section>
 
                 <section>
-                    <p>How does epistasis alter evolutionary trajectories and outcomes.</p>
+                    <h4>Harms Lab</h4>
+                    <div align="center">
+                        <img src="presentation-data/img/lab-photo.jpg" height="70%" width="70%" class="img-responsnive" />
+                    </div>
+                    <p>(Zach Sailer)</p>
+
+                </section>
+
+                <section>
+                    <p>How does epistasis alter evolutionary trajectories and outcomes?</p>
+                    <p class="fragment">What's the role of high-order epistasis?</p>
                 </section>
 
                 <!--
                 <section>
                     <h4>How does the structure of the genotype-phenotype map shape evolutionary trajectories and outcomes?</h4>
                 </section>
-
 
                 <section data-transition="fade">
                     <p>How does the word <span style="color:rgb(164,0,199);">LION</span> evolve into <span style="color:rgb(250,157,0);">TOAD</span>?</p>
@@ -103,15 +114,13 @@
                     <small>Bloom et al. (2010) <em>Science</em> 328:1272</small>
                     <br/>
 
-                    <h4 class="fragment"><span style="color:blue">Evolutionary memory = epistasis + time:</span> the effect of a mutation depends on previous substitutions</h4>
                 </section>
 
                 <section>
                     <p>Epistasis can have many effects:</p>
                     <ul>
+                        <li>Stochastically opens evolutionary trajectories (making evolution contingent on the past). <br/><small>Harms & Thornton (2014) <em>Nature</em> 512:203</small></li>
                         <li>Limits evolutionary trajectories (making evolution follow predictable trajectories). <br/><small>Weinreich et al (2006) <em>Science</em> 312(7):111</small></li>
-                        <li>Stochastically opens evolutionary trajectories (making evolution contingent on the past). <br/><small>Harms & Thornton (2014) <em>Nature</em> 512:203
-</small></li>
                         <li>"Entrenches" evolutionary trajectories (making evolution irreversible). <br/><small>Shah et al. (2015) <em>PNAS</em> 112(25):E3226</small></li>
                     </ul>           
                 </section> 
@@ -154,7 +163,7 @@
 
                 <section>
 
-                    <h4>High-order epistasis can be measured in binary genotype-phenotype maps></h4>
+                    <h4>High-order epistasis can be measured in binary genotype-phenotype maps</h4>
 
                     <div class="row">
 
@@ -276,17 +285,58 @@
                 </section>
 
                 <section>
-                    <h4>Stuff</h4>
+                    <h4>It's important to treat:</h4>
                     <br/>
                     <p>Experimental uncertainty</p>
+                    <p class="fragment">...bootstrap from uncertainty in $\vec{P}$.</p>
                     <br/>
-                    <p>Nonlinear scales</p>
-                    <br/>
+                    <p>Map scale (possibly nonlinear)</p>
+                    <p class="fragment">...measure by regression.</p>
+                </section>
+
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <object class="img-responsive" data="presentation-data/img/nonlinear-model_0.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/nonlinear-model_0.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
+                </section>
+
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <object class="img-responsive" data="presentation-data/img/nonlinear-model_1.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/nonlinear-model_1.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
+                </section>
+
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <object class="img-responsive" data="presentation-data/img/nonlinear-model_2.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/nonlinear-model_2.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
+                </section>
+
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <object class="img-responsive" data="presentation-data/img/nonlinear-model_3.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/nonlinear-model_3.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
+                </section>
+
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <object class="img-responsive" data="presentation-data/img/nonlinear-model_4.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/nonlinear-model_4.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
                 </section>
 
                 <section>
                     <div align="center">
-                        <h4>Can we see this experimentally?</h4>
+                        <h4>X</h4>
                         <br/>
                         <img class="img-responsive fragment" height="60%" width="60%" src="presentation-data/img/hoe.png" />
                     </div>
@@ -335,27 +385,44 @@
                 </section>
 
                 <section data-transition="fade">
-                    <h4>Does it matter for evolution?</h4>
-                    <div align="center">
-                        <img class="img-responsive" height="75%" width="75%" src="presentation-data/img/trajectories-0.png" />
+                    <div class="row" align="center">
+                        <p>High-order epistasis alters evolutionary trajectories.</p> 
+                        <br/>
+                        <object class="img-responsive" data="presentation-data/img/trajectories-through-gp-maps_0.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/trajectories-through-gp-maps_0.png" height="100%" width="100%"/>
+                        </object>
                     </div>
                 </section>
 
                 <section data-transition="fade">
-                    <h4>Does it matter for evolution?</h4>
-                    <div align="center">
-                        <img class="img-responsive" height="75%" width="75%" src="presentation-data/img/trajectories-1.png" />
+                    <div class="row" align="center">
+                        <p>High-order epistasis alters evolutionary trajectories.</p> 
+                        <br/>
+                        <object class="img-responsive" data="presentation-data/img/trajectories-through-gp-maps_1.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/trajectories-through-gp-maps_1.png" height="100%" width="100%"/>
+                        </object>
                     </div>
                 </section>
 
                 <section data-transition="fade">
-                    <h4>Does it matter for evolution?</h4>
-                    <div align="center">
-                        <img class="img-responsive" height="75%" width="75%" src="presentation-data/img/trajectories-2.png" />
+                    <div class="row" align="center">
+                        <p>High-order epistasis alters evolutionary trajectories.</p> 
+                        <br/>
+                        <object class="img-responsive" data="presentation-data/img/trajectories-through-gp-maps_2.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/trajectories-through-gp-maps_2.png" height="100%" width="100%"/>
+                        </object>
                     </div>
                 </section>
 
-
+                <section data-transition="fade">
+                    <div class="row" align="center">
+                        <p>High-order epistasis alters evolutionary trajectories.</p> 
+                        <br/>
+                        <object class="img-responsive" data="presentation-data/img/trajectories-through-gp-maps_3.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/trajectories-through-gp-maps_3.png" height="100%" width="100%"/>
+                        </object>
+                    </div>
+                </section>
                 <!--
                 <section data-transition="fade">
                     <div align="center">
@@ -390,13 +457,21 @@
                     </ul>
                 </section>
 
-                <section>
-                    <h4>Mutations affect <em>multiple</em> states in an ensemble</h4>
-                    <br/>
-                    <p align="center">
-                        <img class="img-responsive" height="50%" width="50%" src="presentation-data/img/chan-ensemble.png" />
-                    </p>
-                    <small>Sikosek & Chan (2014) <em>J Roy Soc Interface</em> 11:20140419</small>
+                <section/>
+                    <div class="row" align="center">
+                        <h4>Proteins are dynamic</h4>
+                        <br/>
+                        <div class="col-xs-6">
+                            <object class="img-responsive" data="presentation-data/img/snase-animation.gif" type="image/gif" height="100%" width="100%">
+                                <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/snase-animation.gif" height="100%" width="100%"/>
+                            </object>
+                        </div>
+                        <div class="col-xs-6">
+                            <object class="img-responsive" data="presentation-data/img/snase-animation.gif" type="image/gif" height="100%" width="100%">
+                                <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/snase-animation.gif" height="100%" width="100%"/>
+                            </object>
+                        </div>
+                    </div>
                 </section>
 
                 <section>
@@ -422,14 +497,13 @@
                     <img src="presentation-data/img/lattice-1.png" height="90%" width="90%"/><br/>
                 </section>
 
-
                 <section>
-                    <h4>Harms Lab</h4>
-                    <div align="center">
-                        <img src="presentation-data/img/lab-photo.jpg" height="70%" width="70%" class="img-responsnive" />
-                    </div>
 
-
+                    <p>harmslab.uoregon.edu</p>
+                    <p>github.com/harmslab</p>
+                    <p>Mike: @EvolBiochemist, harms@uoregon.edu</p>
+                    <p>Zach: @zrsailer, zsailer@uoregon.edu</p>
+                
                     <h4>Funding</h4>
                     <div class="row">
                         <div class="col-xs-2"></div>
@@ -483,7 +557,9 @@
                         </div>
                         <div class="col-xs-2"></div>
                     </div>
+
                 </section>
+
                
                 <!-- 
                 <section data-transition="fade">
