--- a/index.html
+++ b/index.html
@@ -411,7 +411,9 @@
                     <div align="center">
                         <h4>Genotype-phenotype maps exhibit extensive high-order epistasis</h4>
                         <br/>
-                        <img class="img-responsive" height="60%" width="60%" src="presentation-data/img/hoe.png" />
+                        <object class="img-responsive" data="presentation-data/img/hoe.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/hoe.png" height="100%" width="100%"/>
+                        </object>
                     </div>
                 </section>
 
@@ -419,7 +421,9 @@
                     <div align="center">
                         <h4>Genotype-phenotype maps exhibit extensive high-order epistasis</h4>
                         <br/>
-                        <img class="img-responsive" height="100%" width="100%" src="presentation-data/img/hall-epistasis.png" />
+                        <object class="img-responsive" data="presentation-data/img/hall-epistasis.png" type="image/png" height="100%" width="100%">
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/hall-epistasis.png" height="100%" width="100%"/>
+                        </object>
                     </div>
                     <small>Hall et al. (2010). <em>J. Hered</em> 101(1):S75-S84</small>
                 </section>
@@ -547,7 +551,7 @@
                     <p>Biological systems have multiple states that respond to mutations</p>
                     <div class="row" align="center">
                         <object class="img-responsive" data="presentation-data/img/snase-animation.gif" type="image/gif" height="70%" width="70%">
-                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/snase-animation.gif" height="70%" width="70%"/>
+                            <img src="https://dl.dropboxusercontent.com/u/8440421/smbe-2016/snase-animation.gif" height="100%" width="100%"/>
                         </object>
                     </div>
                 </section>
