--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     
 		<script>
 
-            var USE_LOCAL = true;
+            var USE_LOCAL = false;
 
             if (USE_LOCAL) {
                 var mathjax_location = 'MathJax-master/MathJax.js';
